--- a/tripp.html
+++ b/tripp.html
@@ -46,11 +46,7 @@
         <main class="mdl-layout__content">
             <div data-bind="visible: currentPage() === 'Home'" class="home-content">
                 <div class="logo-content">
-                    <img srcset="img/logo-mobile.png 185w,
-                                 img/logo-desktop.png 350w"
-                        sizes="(max-width: 480px) 150px,
-                                     (min-width: 481px) 300px"
-                        src="img/logo-desktop.png" alt="TRIP LOGO">
+                    <img src="img/logo-desktop.png" alt="TRIP LOGO">
                 </div>
                 <div class="destination-content">
                     <p class="home-text">Where you will TRIPP ?</p>
