Add portfolio github and cv links

--- a/tripp.html
+++ b/tripp.html
@@ -86,17 +86,23 @@
                     </p>
                     <div class="about-buttons">
                         <!-- Colored raised button -->
-                        <button class="about-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                        <a href="https://carloscastaneda.dev/home" target="_blank">
+                          <button class="about-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                             My Portafolio
-                        </button>
+                          </button>
+                        </a>
                         <!-- Colored raised button -->
-                        <button class="about-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                        <a href="https://github.com/ccastanedag" target="_blank">
+                          <button class="about-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                             My Github
-                        </button>
+                          </button>
+                        </a>
                         <!-- Colored raised button -->
-                        <button class="about-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                            Download CV
-                        </button>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/porta-8211c.appspot.com/o/Sidebar%2FResume%20Carlos%20Castaneda.pdf?alt=media&token=153dc2c6-4168-4a22-a958-2e50daa6fc8e" target="_blank">
+                          <button class="about-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                            Download CV 
+                          </button>
+                        </a>
                     </div>
                 </div>
             </div>
